[gd_scene load_steps=7 format=3 uid="uid://ck2oah7a38n8g"]

[ext_resource type="FontFile" uid="uid://cfjpdm630h17s" path="res://assets/fonts/runescape_uf.ttf" id="1_1hrav"]
[ext_resource type="Script" path="res://scenes/ui.gd" id="1_pl28k"]

[sub_resource type="Animation" id="Animation_jdl70"]
resource_name = "show_ui"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 650), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_7jrvh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0i5cq"]
resource_name = "hide_ui"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 650)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uiq2r"]
_data = {
"RESET": SubResource("Animation_7jrvh"),
"hide_ui": SubResource("Animation_0i5cq"),
"show_ui": SubResource("Animation_jdl70")
}

[node name="ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pl28k")

[node name="total_score_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 67.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0.4, 0.603922, 0.545098, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_1hrav")
theme_override_font_sizes/font_size = 64
text = "1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bg" type="Node2D" parent="."]

[node name="color_rect" type="ColorRect" parent="bg"]
custom_minimum_size = Vector2(1500, 600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 948.0
offset_bottom = 533.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.490196, 0.619608, 0.831373, 1)

[node name="end_screen" type="Control" parent="bg"]
layout_mode = 3
anchors_preset = 0
offset_right = 948.0
offset_bottom = 533.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="vbox" type="VBoxContainer" parent="bg/end_screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -33.5
offset_right = 216.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2

[node name="end_text" type="Label" parent="bg/end_screen/vbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.694118, 0.85098, 1, 1)
theme_override_fonts/font = ExtResource("1_1hrav")
theme_override_font_sizes/font_size = 64
text = "Your total score is:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="end_score" type="Label" parent="bg/end_screen/vbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.788235, 0.941176, 0.956863, 1)
theme_override_fonts/font = ExtResource("1_1hrav")
theme_override_font_sizes/font_size = 64
text = "1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uiq2r")
}
